--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,22 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" routerLink="/">Mi Aplicación</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/">
+      <img class="logo" src="./assets/imagenes/logo/logo.png" alt="Logo"> Hop & Discover
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
           <a class="nav-link" routerLink="/">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/destinos-listar">Destinos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about">Acerca de</a>
+          <a class="nav-link" routerLink="/Usuario-listar">Usuario</a>
         </li>
       </ul>
     </div>
-  </nav>
-  
-  
-
+  </div>
+</nav>
