--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" routerLink="/">
+    <a class="navbar-brand" [routerLink]="['/']">
       <img class="logo" src="./assets/imagenes/logo/logo.png" alt="Logo"> Hop & Discover
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -13,7 +13,7 @@
           <a class="nav-link" routerLink="/">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/destinos-listar">Destinos</a>
+          <a class="nav-link" [routerLink]="['/destinos-listar']">Destinos</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/Usuario-listar">Usuario</a>
