--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,13 +10,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">Inicio</a>
+          <a class="nav-link" [routerLink]="['/']">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/destinos-listar']">Destinos</a>
+          <a class="nav-link" [routerLink]="['/destino-listar']">Destinos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/Usuario-listar">Usuario</a>
+          <a class="nav-link" [routerLink]="['/Usuario-listar']">Usuario</a>
         </li>
       </ul>
     </div>
