--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">
-        <img class="logo" src="./assets/imagenes/logo/logo.png" alt="Logo"> Hop & Discover
+        <img class="logo" src="./assets/logo/logo.png" alt="Logo"> Hop & Discover
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
