--- a/src/app/components/destino/destino-listar/destino-listar.component.html
+++ b/src/app/components/destino/destino-listar/destino-listar.component.html
@@ -34,10 +34,10 @@
           <img [src]="destino.imagen" [alt]="destino.nombre" class="card-img-top">
           <div class="card-body">
             <h5 class="card-title">{{ destino.nombre }}</h5>
-            <p class="card-text">{{ destino.ubicacionTexto }}</p> <!-- Aquí mostramos la ubicación en formato texto -->
+            <p class="card-text">{{ destino.ubicacion }}</p> 
           </div>
           <div class="card-footer">
-            <small>Latitud: {{ destino.ubicacion.lat }}, Longitud: {{ destino.ubicacion.lng }}</small>
+            <small>Latitud: {{ destino.coordenadas.lat }}, Longitud: {{ destino.coordenadas.lng }}</small>
           </div>
         </div>
       </div>
