--- a/src/app/components/destino/destino-crear/destino-crear.component.css
+++ b/src/app/components/destino/destino-crear/destino-crear.component.css
@@ -5,7 +5,7 @@
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 2px;
-    padding: 20px; 
+    padding: 20px;
     background-color: #495057;
     color: white;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
@@ -30,4 +30,13 @@ h2 {
 
 .form-check-label {
     margin-left: 10px;
+}
+
+.text-danger {
+    color: red;
+    font-size: 0.875rem;
+}
+
+.text-danger small {
+    display: block;
 }
