--- a/src/app/components/destino/destino-crear/destino-crear.component.html
+++ b/src/app/components/destino/destino-crear/destino-crear.component.html
@@ -7,9 +7,11 @@
     </div>
   </div>
 
+  <br>
+
   <div class="container">
     <div class="form-container">
-      <h2>Formulario:</h2>
+      <h2>Crear Destino:</h2>
       <form [formGroup]="destinoForm" (ngSubmit)="agregarDestino()">
         <div class="mb-3">
           <label for="nombre" class="form-label">Nombre del destino:</label>
