--- a/src/app/components/destino/destino-editar/destino-editar.component.css
+++ b/src/app/components/destino/destino-editar/destino-editar.component.css
@@ -5,9 +5,28 @@
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 2px;
-    padding: 20px; 
+    padding: 20px;
     background-color: #495057;
     color: white;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+.form-container {
+    background-color: #ffffff;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+h2 {
+    color: #007bff;
+}
+
+.form-group label {
+    font-weight: bold;
+}
+
+.form-check-label {
+    margin-left: 10px;
 }
